# ctp

./: .ctp.example  .ctp.example.toml  .ctp.toml.example  Cargo.toml  README.md
.github/workflows/: rust.yml
proj-example/: README.md  main.c
src/: commands.rs  directory.rs  main.rs  opts.rs  shape.rs
src/tests/: mod.rs
