[package]
name = "ctp"
version = "0.1.2"
edition = "2021"
description = "Create The Project"
license = "MIT"
authors = ["William Lane <williamlane923@gmail.com>"]
repository = "https://github.com/willdoescode/ctp"

[dependencies]
anyhow = "1.0.44"
clap = "3.0.0-beta.5"
thiserror = "1.0.30"
toml = "0.5.8"
